# AgenticAI_KnowladgeBase

./: pyproject.toml
Agentic_Tutorials/BookRecomender/: BaseRecomender.ipynb  DataCleaning.ipynb  book_dashboard.py  sentiment_analysis.ipynb  text-classification.ipynb
Agentic_Tutorials/EmailAutomatizer/: EmailCrew.py  EmailSummariser.py
Agentic_Tutorials/LLMBasics/: PetNameGeneratorStreamlit.py  langchain_helper.py
Agentic_Tutorials/LangGraph/Conditional-graph/: conditional-graph.ipynb  exercise4.ipynb
Agentic_Tutorials/LangGraph/Drafter/: drafter.py
Agentic_Tutorials/LangGraph/Looping graph/: exercise5.ipynb  looping-graph.ipynb
Agentic_Tutorials/LangGraph/Multpile_inputs/: Multpile_inputs.ipynb  exercise2.ipynb
Agentic_Tutorials/LangGraph/RAG/: RAG.py  chroma.sqlite3
Agentic_Tutorials/LangGraph/ReActAgent/: ReAct.py
Agentic_Tutorials/LangGraph/chatbot/: chatbot.py
Agentic_Tutorials/LangGraph/hello-world/: exercie1.ipynb  main.ipynb
Agentic_Tutorials/LangGraph/sequential-graph/: exercise3.ipynb  sequential.ipynb
Agentic_Tutorials/LangGraph/simple-bot/: simple_bot.py
Agentic_Tutorials/MCP/Calculator/: README.md  fastmcp_calculator.py  fastmcp_calculator_http.py
Agentic_Tutorials/MCP/Calculator_API/: fastapi_mcp_calculator.py  readme.md
Agentic_Tutorials/MCP/FeedSearch/: feed_mcp.py  readme.md
ComputerVision/NumberDetector/: main.py  pyproject.toml
DataPipelines/StreamLitEDAs/EDAs/: Basketball_EDA.py  output.csv
DataPipelines/StreamLitEDAs/StockPriceCheck/: app1.py
