[project]
name = "agenticai-knowladgebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.6.1",
    "fastapi-mcp>=0.4.0",
    "fastmcp>=2.14.1",
    "feedparser>=6.0.12",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.1.3",
    "langgraph>=1.0.6",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.53.1",
    "uvicorn[standard]>=0.40.0",
    "yfinance>=1.1.0",
]
